fixed alignment in main main containers

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ html, body {
 	-moz-box-shadow: 0 10px 20px rgba(0,0,0,.7);
         box-shadow: 0 10px 20px rgba(0,0,0,.7);
     margin-bottom: 40px;
-    padding: 10px;
+   
 }
 
 /*==================== 
@@ -110,9 +110,7 @@ footer{
 	width: inherit;
 }
 
-.newsImg{
-	margin: 8px;
-}
+
 
 /*==================== 
 		MEDIA 
@@ -287,6 +285,14 @@ th {
 	font-size: 20px;
 	font-weight: bold;
 
+}
+
+/*==================== 
+		CONTACT
+======================*/
+
+.form-horizontal {
+	margin: 10px 
 }
 
 
